--- a/test.ipynb
+++ b/test.ipynb
@@ -19,6 +19,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is test by jiyoung\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('This is test by jiyoung')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sdljslfjskdjfsljdfkldsjf\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('sdljslfjskdjfsljdfkldsjf')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -41,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
