--- a/test3.ipynb
+++ b/test3.ipynb
@@ -36,6 +36,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "동기화를 하자\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('동기화를 하자')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
