EPO 구현중(지영)

--- a/JY_all_ticker_simpleEPO.ipynb
+++ b/JY_all_ticker_simpleEPO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "[846012 rows x 5 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "array(['USD'], dtype=object)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "'2023-10-10'"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "499"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        " [5 rows x 499 columns])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "[1939 rows x 499 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "[1422 rows x 499 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
        "[127 rows x 499 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1918,7 @@
        "[499 rows x 499 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,75 +1938,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting cvxpy\n",
-      "  Obtaining dependency information for cvxpy from https://files.pythonhosted.org/packages/fc/56/377e9412449a48340ee070eee16ed205b7c4170c36bd1b67345898da21e4/cvxpy-1.4.1-cp311-cp311-win_amd64.whl.metadata\n",
-      "  Downloading cvxpy-1.4.1-cp311-cp311-win_amd64.whl.metadata (9.0 kB)\n",
-      "Collecting osqp>=0.6.2 (from cvxpy)\n",
-      "  Obtaining dependency information for osqp>=0.6.2 from https://files.pythonhosted.org/packages/23/46/232041be3d85624ec4c20b3bdb8bd4bfb6640851901db155917e0c412aef/osqp-0.6.3-cp311-cp311-win_amd64.whl.metadata\n",
-      "  Downloading osqp-0.6.3-cp311-cp311-win_amd64.whl.metadata (1.8 kB)\n",
-      "Collecting ecos>=2 (from cvxpy)\n",
-      "  Downloading ecos-2.0.12-cp311-cp311-win_amd64.whl (72 kB)\n",
-      "     ---------------------------------------- 0.0/72.0 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 72.0/72.0 kB 4.1 MB/s eta 0:00:00\n",
-      "Collecting clarabel>=0.5.0 (from cvxpy)\n",
-      "  Obtaining dependency information for clarabel>=0.5.0 from https://files.pythonhosted.org/packages/a8/6b/0f04f31c1528ab1f6bbc9e6ff83d019386941db4c9e0a7ddd7d16f5a85d2/clarabel-0.6.0-cp37-abi3-win_amd64.whl.metadata\n",
-      "  Downloading clarabel-0.6.0-cp37-abi3-win_amd64.whl.metadata (4.4 kB)\n",
-      "Collecting scs>=3.0 (from cvxpy)\n",
-      "  Obtaining dependency information for scs>=3.0 from https://files.pythonhosted.org/packages/12/d1/9d1d653e1b70455d1a427b9208c0f9ceb02092d955575da7bc5c95489592/scs-3.2.4-cp311-cp311-win_amd64.whl.metadata\n",
-      "  Downloading scs-3.2.4-cp311-cp311-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: cvxpy in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (1.4.1)\n",
+      "Requirement already satisfied: osqp>=0.6.2 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from cvxpy) (0.6.3)\n",
+      "Requirement already satisfied: ecos>=2 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from cvxpy) (2.0.12)\n",
+      "Requirement already satisfied: clarabel>=0.5.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from cvxpy) (0.6.0)\n",
+      "Requirement already satisfied: scs>=3.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from cvxpy) (3.2.4)\n",
       "Requirement already satisfied: numpy>=1.15 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from cvxpy) (1.24.3)\n",
       "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from cvxpy) (1.10.1)\n",
-      "Collecting pybind11 (from cvxpy)\n",
-      "  Obtaining dependency information for pybind11 from https://files.pythonhosted.org/packages/06/55/9f73c32dda93fa4f539fafa268f9504e83c489f460c380371d94296126cd/pybind11-2.11.1-py3-none-any.whl.metadata\n",
-      "  Downloading pybind11-2.11.1-py3-none-any.whl.metadata (9.5 kB)\n",
-      "Collecting qdldl (from osqp>=0.6.2->cvxpy)\n",
-      "  Obtaining dependency information for qdldl from https://files.pythonhosted.org/packages/f3/0c/972bd00b80aefc57c9a25ca47f802e315ce054fe72cd74d95af6c0f5b3f0/qdldl-0.1.7.post0-cp311-cp311-win_amd64.whl.metadata\n",
-      "  Downloading qdldl-0.1.7.post0-cp311-cp311-win_amd64.whl.metadata (1.8 kB)\n",
-      "Downloading cvxpy-1.4.1-cp311-cp311-win_amd64.whl (1.0 MB)\n",
-      "   ---------------------------------------- 0.0/1.0 MB ? eta -:--:--\n",
-      "   -------------- ------------------------- 0.4/1.0 MB 12.2 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 0.9/1.0 MB 11.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 1.0/1.0 MB 9.4 MB/s eta 0:00:00\n",
-      "Downloading clarabel-0.6.0-cp37-abi3-win_amd64.whl (355 kB)\n",
-      "   ---------------------------------------- 0.0/355.1 kB ? eta -:--:--\n",
-      "   --------------------------------------- 355.1/355.1 kB 11.1 MB/s eta 0:00:00\n",
-      "Downloading osqp-0.6.3-cp311-cp311-win_amd64.whl (292 kB)\n",
-      "   ---------------------------------------- 0.0/293.0 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 293.0/293.0 kB 9.1 MB/s eta 0:00:00\n",
-      "Downloading scs-3.2.4-cp311-cp311-win_amd64.whl (8.4 MB)\n",
-      "   ---------------------------------------- 0.0/8.4 MB ? eta -:--:--\n",
-      "   --- ------------------------------------ 0.7/8.4 MB 13.7 MB/s eta 0:00:01\n",
-      "   ----- ---------------------------------- 1.2/8.4 MB 12.7 MB/s eta 0:00:01\n",
-      "   -------- ------------------------------- 1.7/8.4 MB 13.8 MB/s eta 0:00:01\n",
-      "   ---------- ----------------------------- 2.3/8.4 MB 12.2 MB/s eta 0:00:01\n",
-      "   ------------- -------------------------- 2.8/8.4 MB 12.9 MB/s eta 0:00:01\n",
-      "   ---------------- ----------------------- 3.4/8.4 MB 12.1 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 3.9/8.4 MB 11.8 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 4.4/8.4 MB 12.1 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 4.9/8.4 MB 12.1 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 5.4/8.4 MB 12.0 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 6.0/8.4 MB 12.0 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 6.6/8.4 MB 12.0 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 7.1/8.4 MB 11.9 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 7.7/8.4 MB 11.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  8.2/8.4 MB 11.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  8.4/8.4 MB 11.9 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 8.4/8.4 MB 10.9 MB/s eta 0:00:00\n",
-      "Downloading pybind11-2.11.1-py3-none-any.whl (227 kB)\n",
-      "   ---------------------------------------- 0.0/227.7 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 227.7/227.7 kB 4.6 MB/s eta 0:00:00\n",
-      "Downloading qdldl-0.1.7.post0-cp311-cp311-win_amd64.whl (85 kB)\n",
-      "   ---------------------------------------- 0.0/85.1 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 85.1/85.1 kB 5.0 MB/s eta 0:00:00\n",
-      "Installing collected packages: pybind11, scs, qdldl, ecos, clarabel, osqp, cvxpy\n",
-      "Successfully installed clarabel-0.6.0 cvxpy-1.4.1 ecos-2.0.12 osqp-0.6.3 pybind11-2.11.1 qdldl-0.1.7.post0 scs-3.2.4\n",
+      "Requirement already satisfied: pybind11 in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from cvxpy) (2.11.1)\n",
+      "Requirement already satisfied: qdldl in c:\\users\\yoojiyoung\\anaconda3\\lib\\site-packages (from osqp>=0.6.2->cvxpy) (0.1.7.post0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -2017,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2026,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2036,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2055,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2070,7 +2017,7 @@
     "lambda_shrinkage = 0.5\n",
     "\n",
     "# Convert DataFrame to NumPy array and ensure it's symmetric\n",
-    "cov_matrix_np = cov.to_numpy()\n",
+    "cov_matrix_np = cov_matrix.to_numpy()\n",
     "cov_matrix_symmetric = (cov_matrix_np + cov_matrix_np.T) / 2\n",
     "\n",
     "# 상관관계 행렬 조정\n",
@@ -2095,7 +2042,7 @@
     "result = minimize(portfolio_variance, initial_guess, args=(cov_matrix_psd,), method='SLSQP', bounds=bounds, constraints=constraints)\n",
     "\n",
     "# Extract the ticker symbols from the covariance matrix columns\n",
-    "ticker_symbols = cov.columns\n",
+    "ticker_symbols = cov_matrix.columns\n",
     "\n",
     "# Extract the optimal weights\n",
     "optimal_weights = result.x\n",
@@ -2104,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2558,7 @@
        " 'ZTS': 0.002004008016032064}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2621,11 +2568,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 45종목"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 누적수익률 비교 시각화"
+   ]
   }
  ],
  "metadata": {
