--- a/JY_45_ticker_simpleEPO.ipynb
+++ b/JY_45_ticker_simpleEPO.ipynb
@@ -1792,7 +1792,7 @@
     "\n",
     "# Extract the optimal weights\n",
     "optimal_weights = result.x\n",
-    "optimal_weight_dict = {ticker: weight for ticker, weight in zip(ticker_symbols, optimal_weights)}"
+    "optimal_weight_dict_45 = {ticker: weight for ticker, weight in zip(ticker_symbols, optimal_weights)}"
    ]
   },
   {
@@ -1855,7 +1855,330 @@
     }
    ],
    "source": [
-    "optimal_weight_dict"
+    "optimal_weight_dict_45"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 딕셔너리를 데이터 프레임으로 변환\n",
+    "ticker_45_optimal_weights = pd.DataFrame(list(optimal_weight_dict_45.items()), columns=['Ticker', 'Weight'])\n",
+    "ticker_45_optimal_weights.to_csv('./ticker_45_EPO_optimal_weights.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AMD</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ORCL</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CRM</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>INTC</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CSCO</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>JPM</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>GS</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>BAC</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>MS</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>AXP</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>C</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>JNJ</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>UNH</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PFE</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>ABBV</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>MRK</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>AMGN</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>GILD</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>PG</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>KO</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>NKE</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>PEP</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>COST</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>TGT</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>XOM</td>\n",
+       "      <td>0.020930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>CVX</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>NEE</td>\n",
+       "      <td>0.024525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>DUK</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>SO</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>SLB</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>CAT</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>HON</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>GE</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>ADP</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>META</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>HD</td>\n",
+       "      <td>0.011364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>VZ</td>\n",
+       "      <td>0.045455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticker    Weight\n",
+       "0    AAPL  0.011364\n",
+       "1   GOOGL  0.011364\n",
+       "2    MSFT  0.011364\n",
+       "3    NVDA  0.011364\n",
+       "4     AMD  0.011364\n",
+       "5    ORCL  0.011364\n",
+       "6     CRM  0.011364\n",
+       "7    INTC  0.045455\n",
+       "8    CSCO  0.045455\n",
+       "9     JPM  0.011364\n",
+       "10     GS  0.011364\n",
+       "11    BAC  0.045455\n",
+       "12     MS  0.011364\n",
+       "13    AXP  0.011364\n",
+       "14      C  0.045455\n",
+       "15    JNJ  0.011364\n",
+       "16    UNH  0.011364\n",
+       "17    PFE  0.045455\n",
+       "18   ABBV  0.011364\n",
+       "19    MRK  0.045455\n",
+       "20   AMGN  0.011364\n",
+       "21   GILD  0.045455\n",
+       "22     PG  0.011364\n",
+       "23     KO  0.045455\n",
+       "24    NKE  0.011364\n",
+       "25    PEP  0.011364\n",
+       "26   COST  0.011364\n",
+       "27    WMT  0.011364\n",
+       "28    TGT  0.011364\n",
+       "29    XOM  0.020930\n",
+       "30    CVX  0.011364\n",
+       "31    NEE  0.024525\n",
+       "32    DUK  0.045455\n",
+       "33     SO  0.045455\n",
+       "34    SLB  0.045455\n",
+       "35    MMM  0.045455\n",
+       "36    CAT  0.011364\n",
+       "37    HON  0.011364\n",
+       "38     GE  0.045455\n",
+       "39    ADP  0.011364\n",
+       "40   AMZN  0.011364\n",
+       "41   META  0.011364\n",
+       "42     HD  0.011364\n",
+       "43     VZ  0.045455"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticker_45_optimal_weights"
    ]
   }
  ],
