--- a/JY_15_ticker_simpleEPO.ipynb
+++ b/JY_15_ticker_simpleEPO.ipynb
@@ -772,7 +772,7 @@
     "\n",
     "# Extract the optimal weights\n",
     "optimal_weights = result.x\n",
-    "optimal_weight_dict = {ticker: weight for ticker, weight in zip(ticker_symbols, optimal_weights)}"
+    "optimal_weight_dict_15 = {ticker: weight for ticker, weight in zip(ticker_symbols, optimal_weights)}"
    ]
   },
   {
@@ -806,7 +806,156 @@
     }
    ],
    "source": [
-    "optimal_weight_dict"
+    "optimal_weight_dict_15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 딕셔너리를 데이터 프레임으로 변환\n",
+    "ticker_15_optimal_weights = pd.DataFrame(list(optimal_weight_dict_15.items()), columns=['Ticker', 'Weight'])\n",
+    "ticker_15_optimal_weights.to_csv('./ticker_15_EPO_optimal_weights.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JPM</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PG</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PFE</td>\n",
+       "      <td>0.133333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>JNJ</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>KO</td>\n",
+       "      <td>0.133333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>XOM</td>\n",
+       "      <td>0.133333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NEE</td>\n",
+       "      <td>0.133333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>TSLA</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NKE</td>\n",
+       "      <td>0.033333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>BAC</td>\n",
+       "      <td>0.133333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticker    Weight\n",
+       "0    AAPL  0.033333\n",
+       "1    AMZN  0.033333\n",
+       "2    NVDA  0.033333\n",
+       "3     JPM  0.033333\n",
+       "4      PG  0.033333\n",
+       "5     PFE  0.133333\n",
+       "6     JNJ  0.033333\n",
+       "7      KO  0.133333\n",
+       "8     XOM  0.133333\n",
+       "9     NEE  0.133333\n",
+       "10  GOOGL  0.033333\n",
+       "11   MSFT  0.033333\n",
+       "12   TSLA  0.033333\n",
+       "13    NKE  0.033333\n",
+       "14    BAC  0.133333"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticker_15_optimal_weights"
    ]
   }
  ],
