--- a/JY_30_ticker_simpleEPO.ipynb
+++ b/JY_30_ticker_simpleEPO.ipynb
@@ -1400,7 +1400,7 @@
     "\n",
     "# Extract the optimal weights\n",
     "optimal_weights = result.x\n",
-    "optimal_weight_dict = {ticker: weight for ticker, weight in zip(ticker_symbols, optimal_weights)}"
+    "optimal_weight_dict_30 = {ticker: weight for ticker, weight in zip(ticker_symbols, optimal_weights)}"
    ]
   },
   {
@@ -1449,7 +1449,246 @@
     }
    ],
    "source": [
-    "optimal_weight_dict"
+    "optimal_weight_dict_30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 딕셔너리를 데이터 프레임으로 변환\n",
+    "ticker_30_optimal_weights = pd.DataFrame(list(optimal_weight_dict_30.items()), columns=['Ticker', 'Weight'])\n",
+    "ticker_30_optimal_weights.to_csv('./ticker_30_EPO_optimal_weights.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NVDA</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ADBE</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>JNJ</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PFE</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>MRK</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ABT</td>\n",
+       "      <td>0.055998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>PG</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>KO</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>JPM</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>GS</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CAT</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>CVX</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>XOM</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>BA</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>TSLA</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>NEE</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>NKE</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>VZ</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>CRM</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>UNH</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>0.027336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>QCOM</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>BRK-B</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>V</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>MCD</td>\n",
+       "      <td>0.016667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>INTC</td>\n",
+       "      <td>0.066667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticker    Weight\n",
+       "0    MSFT  0.016667\n",
+       "1    AMZN  0.016667\n",
+       "2    NVDA  0.016667\n",
+       "3    AAPL  0.016667\n",
+       "4   GOOGL  0.016667\n",
+       "5    ADBE  0.016667\n",
+       "6     JNJ  0.066667\n",
+       "7     PFE  0.066667\n",
+       "8     MRK  0.066667\n",
+       "9     ABT  0.055998\n",
+       "10     PG  0.016667\n",
+       "11     KO  0.066667\n",
+       "12    JPM  0.016667\n",
+       "13     GS  0.016667\n",
+       "14    CAT  0.016667\n",
+       "15    CVX  0.016667\n",
+       "16    XOM  0.066667\n",
+       "17     BA  0.066667\n",
+       "18   TSLA  0.016667\n",
+       "19    NEE  0.066667\n",
+       "20    NKE  0.016667\n",
+       "21     VZ  0.066667\n",
+       "22    CRM  0.016667\n",
+       "23    UNH  0.016667\n",
+       "24    WMT  0.027336\n",
+       "25   QCOM  0.016667\n",
+       "26  BRK-B  0.016667\n",
+       "27      V  0.016667\n",
+       "28    MCD  0.016667\n",
+       "29   INTC  0.066667"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticker_30_optimal_weights"
    ]
   }
  ],
