--- a/Hanyong/Team1_v3.ipynb
+++ b/Hanyong/Team1_v3.ipynb
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "merged_df = pd.read_csv('/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/merged_market_data.csv')\n",
+    "merged_df = pd.read_csv('/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/merged_market_data.csv') # 경로는 수정해주세요\n",
     "merged_df"
    ]
   },
